parser.output
Useless nonterminals

   ConditionVar


Useless rules

  103 ConditionVar: NUMBER
  104             | ID
  105             | FLOAT_NUM
  106             | CHARLITERAL


Rules never reduced

   39 StmtList: Expr


State 0 conflicts: 10 shift/reduce
State 13 conflicts: 10 shift/reduce, 1 reduce/reduce
State 17 conflicts: 4 shift/reduce, 12 reduce/reduce
State 43 conflicts: 12 reduce/reduce
State 70 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 73 conflicts: 2 shift/reduce
State 104 conflicts: 12 reduce/reduce
State 113 conflicts: 2 shift/reduce
State 163 conflicts: 1 shift/reduce
State 166 conflicts: 9 shift/reduce
State 182 conflicts: 9 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: Decl DeclList
    3         | Decl

    4 Decl: FuncDecl
    5     | VarDecl
    6     | StmtList
    7     | WhileStmt
    8     | IfStmt

    9 @1: /* empty */

   10 FuncDecl: VOID ID LPAREN @1 ParamDeclList RPAREN Block

   11 @2: /* empty */

   12 FuncDecl: INT ID LPAREN @2 ParamDeclList RPAREN Block

   13 @3: /* empty */

   14 FuncDecl: CHAR ID LPAREN @3 ParamDeclList RPAREN Block

   15 @4: /* empty */

   16 FuncDecl: FLOAT ID LPAREN @4 ParamDeclList RPAREN Block

   17 ParamDeclList: ParamDecl COMMA ParamDeclList
   18              | ParamDecl

   19 ParamDecl: /* empty */
   20          | INT ID
   21          | FLOAT ID
   22          | CHAR ID

   23 ArgDeclList: ArgDecl COMMA ArgDeclList
   24            | ArgDecl

   25 ArgDecl: /* empty */
   26        | NUMBER
   27        | FLOAT_NUM
   28        | CHARLITERAL
   29        | ID

   30 Block: LBRACKET BlockDeclList RBRACKET

   31 BlockDeclList: BlockDecl BlockDeclList
   32              | BlockDecl

   33 BlockDecl: VarDecl
   34          | StmtList
   35          | WhileStmt
   36          | IfStmt

   37 StmtList: /* empty */
   38         | Expr StmtList
   39         | Expr

   40 VarDecl: INT ID SEMICOLON
   41        | ID EQ NUMBER SEMICOLON
   42        | CHAR ID SEMICOLON
   43        | ID EQ CHARLITERAL SEMICOLON
   44        | FLOAT ID SEMICOLON
   45        | ID EQ FLOAT_NUM SEMICOLON
   46        | ID EQ ID SEMICOLON
   47        | IDEQExpr SEMICOLON
   48        | ArrDecl

   49 Expr: SEMICOLON
   50     | ID EQ ID SEMICOLON
   51     | ID EQ ID LPAREN ArgDeclList RPAREN SEMICOLON
   52     | WRITE ID SEMICOLON
   53     | WRITE STRINGLITERAL SEMICOLON
   54     | WRITE ID LBRACE NUMBER RBRACE SEMICOLON
   55     | WRITE NEWLINECHAR SEMICOLON
   56     | IDEQExpr SEMICOLON
   57     | ID LBRACE NUMBER RBRACE EQ NUMBER SEMICOLON
   58     | ID LBRACE NUMBER RBRACE EQ Math SEMICOLON
   59     | ID LBRACE NUMBER RBRACE EQ CHARLITERAL SEMICOLON
   60     | ID LPAREN ArgDeclList RPAREN SEMICOLON
   61     | RETURN ID SEMICOLON
   62     | RETURN NUMBER SEMICOLON
   63     | RETURN FLOAT_NUM SEMICOLON
   64     | RETURN CHARLITERAL SEMICOLON

   65 IDEQExpr: ID EQ MathStmt

   66 MathStmt: Math MathStmt
   67         | Math

   68 Math: LPAREN
   69     | RPAREN
   70     | ID
   71     | NUMBER
   72     | FLOAT_NUM
   73     | EXPONENT
   74     | Operator

   75 Operator: PLUS_OP
   76         | SUB_OP
   77         | MULT_OP
   78         | DIV_OP

   79 CompOperator: DOUBLE_EQ
   80             | LT
   81             | GT
   82             | LT_EQ
   83             | GT_EQ
   84             | NOT_EQ

   85 ArrDecl: INT ID LBRACE RBRACE SEMICOLON
   86        | CHAR ID LBRACE RBRACE SEMICOLON
   87        | INT ID LBRACE NUMBER RBRACE SEMICOLON
   88        | CHAR ID LBRACE NUMBER RBRACE SEMICOLON

   89 @5: /* empty */

   90 @6: /* empty */

   91 WhileStmt: WHILE @5 LPAREN Condition RPAREN @6 Block

   92 @7: /* empty */

   93 @8: /* empty */

   94 @9: /* empty */

   95 IfStmt: IF @7 LPAREN Condition RPAREN @8 Block @9 ElseStmt

   96 ElseStmt: /* empty */
   97         | ELSE Block

   98 Condition: NUMBER CompOperator NUMBER
   99          | ID CompOperator ID
  100          | ID CompOperator NUMBER
  101          | FLOAT_NUM CompOperator FLOAT_NUM
  102          | CHARLITERAL CompOperator CHARLITERAL


Terminals, with rules where they appear

$end (0) 0
error (256)
CHAR (258) 14 22 42 86 88
INT (259) 12 20 40 85 87
FLOAT (260) 16 21 44
VOID (261) 10
IF (262) 95
ELSE (263) 97
WHILE (264) 91
WRITE (265) 52 53 54 55
RETURN (266) 61 62 63 64
COMMA (267) 17 23
SEMICOLON (268) 40 41 42 43 44 45 46 47 49 50 51 52 53 54 55 56 57
    58 59 60 61 62 63 64 85 86 87 88
NEWLINECHAR (269) 55
DOUBLE_EQ (270) 79
NOT_EQ (271) 84
LT_EQ (272) 82
GT_EQ (273) 83
LT (274) 80
GT (275) 81
EQ (276) 41 43 45 46 50 51 57 58 59 65
PLUS_OP (277) 75
MULT_OP (278) 77
SUB_OP (279) 76
DIV_OP (280) 78
EXPONENT (281) 73
LPAREN (282) 10 12 14 16 51 60 68 91 95
RPAREN (283) 10 12 14 16 51 60 69 91 95
LBRACKET (284) 30
RBRACKET (285) 30
LBRACE (286) 54 57 58 59 85 86 87 88
RBRACE (287) 54 57 58 59 85 86 87 88
NUMBER (288) 26 41 54 57 58 59 62 71 87 88 98 100
FLOAT_NUM (289) 27 45 63 72 101
STRINGLITERAL (290) 53
CHARLITERAL (291) 28 43 59 64 102
ID (292) 10 12 14 16 20 21 22 29 40 41 42 43 44 45 46 50 51 52 54 57
    58 59 60 61 65 70 85 86 87 88 99 100


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Program (39)
    on left: 1, on right: 0
DeclList (40)
    on left: 2 3, on right: 1 2
Decl (41)
    on left: 4 5 6 7 8, on right: 2 3
FuncDecl (42)
    on left: 10 12 14 16, on right: 4
@1 (43)
    on left: 9, on right: 10
@2 (44)
    on left: 11, on right: 12
@3 (45)
    on left: 13, on right: 14
@4 (46)
    on left: 15, on right: 16
ParamDeclList (47)
    on left: 17 18, on right: 10 12 14 16 17
ParamDecl (48)
    on left: 19 20 21 22, on right: 17 18
ArgDeclList (49)
    on left: 23 24, on right: 23 51 60
ArgDecl (50)
    on left: 25 26 27 28 29, on right: 23 24
Block (51)
    on left: 30, on right: 10 12 14 16 91 95 97
BlockDeclList (52)
    on left: 31 32, on right: 30 31
BlockDecl (53)
    on left: 33 34 35 36, on right: 31 32
StmtList (54)
    on left: 37 38 39, on right: 6 34 38
VarDecl (55)
    on left: 40 41 42 43 44 45 46 47 48, on right: 5 33
Expr (56)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64,
    on right: 38 39
IDEQExpr (57)
    on left: 65, on right: 47 56
MathStmt (58)
    on left: 66 67, on right: 65 66
Math (59)
    on left: 68 69 70 71 72 73 74, on right: 58 66 67
Operator (60)
    on left: 75 76 77 78, on right: 74
CompOperator (61)
    on left: 79 80 81 82 83 84, on right: 98 99 100 101 102
ArrDecl (62)
    on left: 85 86 87 88, on right: 48
WhileStmt (63)
    on left: 91, on right: 7 35
@5 (64)
    on left: 89, on right: 91
@6 (65)
    on left: 90, on right: 91
IfStmt (66)
    on left: 95, on right: 8 36
@7 (67)
    on left: 92, on right: 95
@8 (68)
    on left: 93, on right: 95
@9 (69)
    on left: 94, on right: 95
ElseStmt (70)
    on left: 96 97, on right: 95
Condition (71)
    on left: 98 99 100 101 102, on right: 91 95


state 0

    0 $accept: . Program $end

    CHAR       shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    VOID       shift, and go to state 4
    IF         shift, and go to state 5
    WHILE      shift, and go to state 6
    WRITE      shift, and go to state 7
    RETURN     shift, and go to state 8
    SEMICOLON  shift, and go to state 9
    ID         shift, and go to state 10

    CHAR       [reduce using rule 37 (StmtList)]
    INT        [reduce using rule 37 (StmtList)]
    FLOAT      [reduce using rule 37 (StmtList)]
    VOID       [reduce using rule 37 (StmtList)]
    IF         [reduce using rule 37 (StmtList)]
    WHILE      [reduce using rule 37 (StmtList)]
    WRITE      [reduce using rule 37 (StmtList)]
    RETURN     [reduce using rule 37 (StmtList)]
    SEMICOLON  [reduce using rule 37 (StmtList)]
    ID         [reduce using rule 37 (StmtList)]
    $default   reduce using rule 37 (StmtList)

    Program    go to state 11
    DeclList   go to state 12
    Decl       go to state 13
    FuncDecl   go to state 14
    StmtList   go to state 15
    VarDecl    go to state 16
    Expr       go to state 17
    IDEQExpr   go to state 18
    ArrDecl    go to state 19
    WhileStmt  go to state 20
    IfStmt     go to state 21


state 1

   14 FuncDecl: CHAR . ID LPAREN @3 ParamDeclList RPAREN Block
   42 VarDecl: CHAR . ID SEMICOLON
   86 ArrDecl: CHAR . ID LBRACE RBRACE SEMICOLON
   88        | CHAR . ID LBRACE NUMBER RBRACE SEMICOLON

    ID  shift, and go to state 22


state 2

   12 FuncDecl: INT . ID LPAREN @2 ParamDeclList RPAREN Block
   40 VarDecl: INT . ID SEMICOLON
   85 ArrDecl: INT . ID LBRACE RBRACE SEMICOLON
   87        | INT . ID LBRACE NUMBER RBRACE SEMICOLON

    ID  shift, and go to state 23


state 3

   16 FuncDecl: FLOAT . ID LPAREN @4 ParamDeclList RPAREN Block
   44 VarDecl: FLOAT . ID SEMICOLON

    ID  shift, and go to state 24


state 4

   10 FuncDecl: VOID . ID LPAREN @1 ParamDeclList RPAREN Block

    ID  shift, and go to state 25


state 5

   95 IfStmt: IF . @7 LPAREN Condition RPAREN @8 Block @9 ElseStmt

    $default  reduce using rule 92 (@7)

    @7  go to state 26


state 6

   91 WhileStmt: WHILE . @5 LPAREN Condition RPAREN @6 Block

    $default  reduce using rule 89 (@5)

    @5  go to state 27


state 7

   52 Expr: WRITE . ID SEMICOLON
   53     | WRITE . STRINGLITERAL SEMICOLON
   54     | WRITE . ID LBRACE NUMBER RBRACE SEMICOLON
   55     | WRITE . NEWLINECHAR SEMICOLON

    NEWLINECHAR    shift, and go to state 28
    STRINGLITERAL  shift, and go to state 29
    ID             shift, and go to state 30


state 8

   61 Expr: RETURN . ID SEMICOLON
   62     | RETURN . NUMBER SEMICOLON
   63     | RETURN . FLOAT_NUM SEMICOLON
   64     | RETURN . CHARLITERAL SEMICOLON

    NUMBER       shift, and go to state 31
    FLOAT_NUM    shift, and go to state 32
    CHARLITERAL  shift, and go to state 33
    ID           shift, and go to state 34


state 9

   49 Expr: SEMICOLON .

    $default  reduce using rule 49 (Expr)


state 10

   41 VarDecl: ID . EQ NUMBER SEMICOLON
   43        | ID . EQ CHARLITERAL SEMICOLON
   45        | ID . EQ FLOAT_NUM SEMICOLON
   46        | ID . EQ ID SEMICOLON
   50 Expr: ID . EQ ID SEMICOLON
   51     | ID . EQ ID LPAREN ArgDeclList RPAREN SEMICOLON
   57     | ID . LBRACE NUMBER RBRACE EQ NUMBER SEMICOLON
   58     | ID . LBRACE NUMBER RBRACE EQ Math SEMICOLON
   59     | ID . LBRACE NUMBER RBRACE EQ CHARLITERAL SEMICOLON
   60     | ID . LPAREN ArgDeclList RPAREN SEMICOLON
   65 IDEQExpr: ID . EQ MathStmt

    EQ      shift, and go to state 35
    LPAREN  shift, and go to state 36
    LBRACE  shift, and go to state 37


state 11

    0 $accept: Program . $end

    $end  shift, and go to state 38


state 12

    1 Program: DeclList .

    $default  reduce using rule 1 (Program)


state 13

    2 DeclList: Decl . DeclList
    3         | Decl .

    CHAR       shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    VOID       shift, and go to state 4
    IF         shift, and go to state 5
    WHILE      shift, and go to state 6
    WRITE      shift, and go to state 7
    RETURN     shift, and go to state 8
    SEMICOLON  shift, and go to state 9
    ID         shift, and go to state 10

    $end       reduce using rule 3 (DeclList)
    $end       [reduce using rule 37 (StmtList)]
    CHAR       [reduce using rule 37 (StmtList)]
    INT        [reduce using rule 37 (StmtList)]
    FLOAT      [reduce using rule 37 (StmtList)]
    VOID       [reduce using rule 37 (StmtList)]
    IF         [reduce using rule 37 (StmtList)]
    WHILE      [reduce using rule 37 (StmtList)]
    WRITE      [reduce using rule 37 (StmtList)]
    RETURN     [reduce using rule 37 (StmtList)]
    SEMICOLON  [reduce using rule 37 (StmtList)]
    ID         [reduce using rule 37 (StmtList)]
    $default   reduce using rule 3 (DeclList)

    DeclList   go to state 39
    Decl       go to state 13
    FuncDecl   go to state 14
    StmtList   go to state 15
    VarDecl    go to state 16
    Expr       go to state 17
    IDEQExpr   go to state 18
    ArrDecl    go to state 19
    WhileStmt  go to state 20
    IfStmt     go to state 21


state 14

    4 Decl: FuncDecl .

    $default  reduce using rule 4 (Decl)


state 15

    6 Decl: StmtList .

    $default  reduce using rule 6 (Decl)


state 16

    5 Decl: VarDecl .

    $default  reduce using rule 5 (Decl)


state 17

   38 StmtList: Expr . StmtList
   39         | Expr .

    WRITE      shift, and go to state 7
    RETURN     shift, and go to state 8
    SEMICOLON  shift, and go to state 9
    ID         shift, and go to state 40

    $end       reduce using rule 37 (StmtList)
    $end       [reduce using rule 39 (StmtList)]
    CHAR       reduce using rule 37 (StmtList)
    CHAR       [reduce using rule 39 (StmtList)]
    INT        reduce using rule 37 (StmtList)
    INT        [reduce using rule 39 (StmtList)]
    FLOAT      reduce using rule 37 (StmtList)
    FLOAT      [reduce using rule 39 (StmtList)]
    VOID       reduce using rule 37 (StmtList)
    VOID       [reduce using rule 39 (StmtList)]
    IF         reduce using rule 37 (StmtList)
    IF         [reduce using rule 39 (StmtList)]
    WHILE      reduce using rule 37 (StmtList)
    WHILE      [reduce using rule 39 (StmtList)]
    WRITE      [reduce using rule 37 (StmtList)]
    WRITE      [reduce using rule 39 (StmtList)]
    RETURN     [reduce using rule 37 (StmtList)]
    RETURN     [reduce using rule 39 (StmtList)]
    SEMICOLON  [reduce using rule 37 (StmtList)]
    SEMICOLON  [reduce using rule 39 (StmtList)]
    RBRACKET   reduce using rule 37 (StmtList)
    RBRACKET   [reduce using rule 39 (StmtList)]
    ID         [reduce using rule 37 (StmtList)]
    ID         [reduce using rule 39 (StmtList)]
    $default   reduce using rule 37 (StmtList)

    StmtList  go to state 41
    Expr      go to state 17
    IDEQExpr  go to state 42


state 18

   47 VarDecl: IDEQExpr . SEMICOLON
   56 Expr: IDEQExpr . SEMICOLON

    SEMICOLON  shift, and go to state 43


state 19

   48 VarDecl: ArrDecl .

    $default  reduce using rule 48 (VarDecl)


state 20

    7 Decl: WhileStmt .

    $default  reduce using rule 7 (Decl)


state 21

    8 Decl: IfStmt .

    $default  reduce using rule 8 (Decl)


state 22

   14 FuncDecl: CHAR ID . LPAREN @3 ParamDeclList RPAREN Block
   42 VarDecl: CHAR ID . SEMICOLON
   86 ArrDecl: CHAR ID . LBRACE RBRACE SEMICOLON
   88        | CHAR ID . LBRACE NUMBER RBRACE SEMICOLON

    SEMICOLON  shift, and go to state 44
    LPAREN     shift, and go to state 45
    LBRACE     shift, and go to state 46


state 23

   12 FuncDecl: INT ID . LPAREN @2 ParamDeclList RPAREN Block
   40 VarDecl: INT ID . SEMICOLON
   85 ArrDecl: INT ID . LBRACE RBRACE SEMICOLON
   87        | INT ID . LBRACE NUMBER RBRACE SEMICOLON

    SEMICOLON  shift, and go to state 47
    LPAREN     shift, and go to state 48
    LBRACE     shift, and go to state 49


state 24

   16 FuncDecl: FLOAT ID . LPAREN @4 ParamDeclList RPAREN Block
   44 VarDecl: FLOAT ID . SEMICOLON

    SEMICOLON  shift, and go to state 50
    LPAREN     shift, and go to state 51


state 25

   10 FuncDecl: VOID ID . LPAREN @1 ParamDeclList RPAREN Block

    LPAREN  shift, and go to state 52


state 26

   95 IfStmt: IF @7 . LPAREN Condition RPAREN @8 Block @9 ElseStmt

    LPAREN  shift, and go to state 53


state 27

   91 WhileStmt: WHILE @5 . LPAREN Condition RPAREN @6 Block

    LPAREN  shift, and go to state 54


state 28

   55 Expr: WRITE NEWLINECHAR . SEMICOLON

    SEMICOLON  shift, and go to state 55


state 29

   53 Expr: WRITE STRINGLITERAL . SEMICOLON

    SEMICOLON  shift, and go to state 56


state 30

   52 Expr: WRITE ID . SEMICOLON
   54     | WRITE ID . LBRACE NUMBER RBRACE SEMICOLON

    SEMICOLON  shift, and go to state 57
    LBRACE     shift, and go to state 58


state 31

   62 Expr: RETURN NUMBER . SEMICOLON

    SEMICOLON  shift, and go to state 59


state 32

   63 Expr: RETURN FLOAT_NUM . SEMICOLON

    SEMICOLON  shift, and go to state 60


state 33

   64 Expr: RETURN CHARLITERAL . SEMICOLON

    SEMICOLON  shift, and go to state 61


state 34

   61 Expr: RETURN ID . SEMICOLON

    SEMICOLON  shift, and go to state 62


state 35

   41 VarDecl: ID EQ . NUMBER SEMICOLON
   43        | ID EQ . CHARLITERAL SEMICOLON
   45        | ID EQ . FLOAT_NUM SEMICOLON
   46        | ID EQ . ID SEMICOLON
   50 Expr: ID EQ . ID SEMICOLON
   51     | ID EQ . ID LPAREN ArgDeclList RPAREN SEMICOLON
   65 IDEQExpr: ID EQ . MathStmt

    PLUS_OP      shift, and go to state 63
    MULT_OP      shift, and go to state 64
    SUB_OP       shift, and go to state 65
    DIV_OP       shift, and go to state 66
    EXPONENT     shift, and go to state 67
    LPAREN       shift, and go to state 68
    RPAREN       shift, and go to state 69
    NUMBER       shift, and go to state 70
    FLOAT_NUM    shift, and go to state 71
    CHARLITERAL  shift, and go to state 72
    ID           shift, and go to state 73

    MathStmt  go to state 74
    Math      go to state 75
    Operator  go to state 76


state 36

   60 Expr: ID LPAREN . ArgDeclList RPAREN SEMICOLON

    NUMBER       shift, and go to state 77
    FLOAT_NUM    shift, and go to state 78
    CHARLITERAL  shift, and go to state 79
    ID           shift, and go to state 80

    $default  reduce using rule 25 (ArgDecl)

    ArgDeclList  go to state 81
    ArgDecl      go to state 82


state 37

   57 Expr: ID LBRACE . NUMBER RBRACE EQ NUMBER SEMICOLON
   58     | ID LBRACE . NUMBER RBRACE EQ Math SEMICOLON
   59     | ID LBRACE . NUMBER RBRACE EQ CHARLITERAL SEMICOLON

    NUMBER  shift, and go to state 83


state 38

    0 $accept: Program $end .

    $default  accept


state 39

    2 DeclList: Decl DeclList .

    $default  reduce using rule 2 (DeclList)


state 40

   50 Expr: ID . EQ ID SEMICOLON
   51     | ID . EQ ID LPAREN ArgDeclList RPAREN SEMICOLON
   57     | ID . LBRACE NUMBER RBRACE EQ NUMBER SEMICOLON
   58     | ID . LBRACE NUMBER RBRACE EQ Math SEMICOLON
   59     | ID . LBRACE NUMBER RBRACE EQ CHARLITERAL SEMICOLON
   60     | ID . LPAREN ArgDeclList RPAREN SEMICOLON
   65 IDEQExpr: ID . EQ MathStmt

    EQ      shift, and go to state 84
    LPAREN  shift, and go to state 36
    LBRACE  shift, and go to state 37


state 41

   38 StmtList: Expr StmtList .

    $default  reduce using rule 38 (StmtList)


state 42

   56 Expr: IDEQExpr . SEMICOLON

    SEMICOLON  shift, and go to state 85


state 43

   47 VarDecl: IDEQExpr SEMICOLON .
   56 Expr: IDEQExpr SEMICOLON .

    $end       reduce using rule 47 (VarDecl)
    $end       [reduce using rule 56 (Expr)]
    CHAR       reduce using rule 47 (VarDecl)
    CHAR       [reduce using rule 56 (Expr)]
    INT        reduce using rule 47 (VarDecl)
    INT        [reduce using rule 56 (Expr)]
    FLOAT      reduce using rule 47 (VarDecl)
    FLOAT      [reduce using rule 56 (Expr)]
    VOID       reduce using rule 47 (VarDecl)
    VOID       [reduce using rule 56 (Expr)]
    IF         reduce using rule 47 (VarDecl)
    IF         [reduce using rule 56 (Expr)]
    WHILE      reduce using rule 47 (VarDecl)
    WHILE      [reduce using rule 56 (Expr)]
    WRITE      reduce using rule 47 (VarDecl)
    WRITE      [reduce using rule 56 (Expr)]
    RETURN     reduce using rule 47 (VarDecl)
    RETURN     [reduce using rule 56 (Expr)]
    SEMICOLON  reduce using rule 47 (VarDecl)
    SEMICOLON  [reduce using rule 56 (Expr)]
    RBRACKET   reduce using rule 47 (VarDecl)
    RBRACKET   [reduce using rule 56 (Expr)]
    ID         reduce using rule 47 (VarDecl)
    ID         [reduce using rule 56 (Expr)]
    $default   reduce using rule 47 (VarDecl)


state 44

   42 VarDecl: CHAR ID SEMICOLON .

    $default  reduce using rule 42 (VarDecl)


state 45

   14 FuncDecl: CHAR ID LPAREN . @3 ParamDeclList RPAREN Block

    $default  reduce using rule 13 (@3)

    @3  go to state 86


state 46

   86 ArrDecl: CHAR ID LBRACE . RBRACE SEMICOLON
   88        | CHAR ID LBRACE . NUMBER RBRACE SEMICOLON

    RBRACE  shift, and go to state 87
    NUMBER  shift, and go to state 88


state 47

   40 VarDecl: INT ID SEMICOLON .

    $default  reduce using rule 40 (VarDecl)


state 48

   12 FuncDecl: INT ID LPAREN . @2 ParamDeclList RPAREN Block

    $default  reduce using rule 11 (@2)

    @2  go to state 89


state 49

   85 ArrDecl: INT ID LBRACE . RBRACE SEMICOLON
   87        | INT ID LBRACE . NUMBER RBRACE SEMICOLON

    RBRACE  shift, and go to state 90
    NUMBER  shift, and go to state 91


state 50

   44 VarDecl: FLOAT ID SEMICOLON .

    $default  reduce using rule 44 (VarDecl)


state 51

   16 FuncDecl: FLOAT ID LPAREN . @4 ParamDeclList RPAREN Block

    $default  reduce using rule 15 (@4)

    @4  go to state 92


state 52

   10 FuncDecl: VOID ID LPAREN . @1 ParamDeclList RPAREN Block

    $default  reduce using rule 9 (@1)

    @1  go to state 93


state 53

   95 IfStmt: IF @7 LPAREN . Condition RPAREN @8 Block @9 ElseStmt

    NUMBER       shift, and go to state 94
    FLOAT_NUM    shift, and go to state 95
    CHARLITERAL  shift, and go to state 96
    ID           shift, and go to state 97

    Condition  go to state 98


state 54

   91 WhileStmt: WHILE @5 LPAREN . Condition RPAREN @6 Block

    NUMBER       shift, and go to state 94
    FLOAT_NUM    shift, and go to state 95
    CHARLITERAL  shift, and go to state 96
    ID           shift, and go to state 97

    Condition  go to state 99


state 55

   55 Expr: WRITE NEWLINECHAR SEMICOLON .

    $default  reduce using rule 55 (Expr)


state 56

   53 Expr: WRITE STRINGLITERAL SEMICOLON .

    $default  reduce using rule 53 (Expr)


state 57

   52 Expr: WRITE ID SEMICOLON .

    $default  reduce using rule 52 (Expr)


state 58

   54 Expr: WRITE ID LBRACE . NUMBER RBRACE SEMICOLON

    NUMBER  shift, and go to state 100


state 59

   62 Expr: RETURN NUMBER SEMICOLON .

    $default  reduce using rule 62 (Expr)


state 60

   63 Expr: RETURN FLOAT_NUM SEMICOLON .

    $default  reduce using rule 63 (Expr)


state 61

   64 Expr: RETURN CHARLITERAL SEMICOLON .

    $default  reduce using rule 64 (Expr)


state 62

   61 Expr: RETURN ID SEMICOLON .

    $default  reduce using rule 61 (Expr)


state 63

   75 Operator: PLUS_OP .

    $default  reduce using rule 75 (Operator)


state 64

   77 Operator: MULT_OP .

    $default  reduce using rule 77 (Operator)


state 65

   76 Operator: SUB_OP .

    $default  reduce using rule 76 (Operator)


state 66

   78 Operator: DIV_OP .

    $default  reduce using rule 78 (Operator)


state 67

   73 Math: EXPONENT .

    $default  reduce using rule 73 (Math)


state 68

   68 Math: LPAREN .

    $default  reduce using rule 68 (Math)


state 69

   69 Math: RPAREN .

    $default  reduce using rule 69 (Math)


state 70

   41 VarDecl: ID EQ NUMBER . SEMICOLON
   71 Math: NUMBER .

    SEMICOLON  shift, and go to state 101

    SEMICOLON  [reduce using rule 71 (Math)]
    $default   reduce using rule 71 (Math)


state 71

   45 VarDecl: ID EQ FLOAT_NUM . SEMICOLON
   72 Math: FLOAT_NUM .

    SEMICOLON  shift, and go to state 102

    SEMICOLON  [reduce using rule 72 (Math)]
    $default   reduce using rule 72 (Math)


state 72

   43 VarDecl: ID EQ CHARLITERAL . SEMICOLON

    SEMICOLON  shift, and go to state 103


state 73

   46 VarDecl: ID EQ ID . SEMICOLON
   50 Expr: ID EQ ID . SEMICOLON
   51     | ID EQ ID . LPAREN ArgDeclList RPAREN SEMICOLON
   70 Math: ID .

    SEMICOLON  shift, and go to state 104
    LPAREN     shift, and go to state 105

    SEMICOLON  [reduce using rule 70 (Math)]
    LPAREN     [reduce using rule 70 (Math)]
    $default   reduce using rule 70 (Math)


state 74

   65 IDEQExpr: ID EQ MathStmt .

    $default  reduce using rule 65 (IDEQExpr)


state 75

   66 MathStmt: Math . MathStmt
   67         | Math .

    PLUS_OP    shift, and go to state 63
    MULT_OP    shift, and go to state 64
    SUB_OP     shift, and go to state 65
    DIV_OP     shift, and go to state 66
    EXPONENT   shift, and go to state 67
    LPAREN     shift, and go to state 68
    RPAREN     shift, and go to state 69
    NUMBER     shift, and go to state 106
    FLOAT_NUM  shift, and go to state 107
    ID         shift, and go to state 108

    $default  reduce using rule 67 (MathStmt)

    MathStmt  go to state 109
    Math      go to state 75
    Operator  go to state 76


state 76

   74 Math: Operator .

    $default  reduce using rule 74 (Math)


state 77

   26 ArgDecl: NUMBER .

    $default  reduce using rule 26 (ArgDecl)


state 78

   27 ArgDecl: FLOAT_NUM .

    $default  reduce using rule 27 (ArgDecl)


state 79

   28 ArgDecl: CHARLITERAL .

    $default  reduce using rule 28 (ArgDecl)


state 80

   29 ArgDecl: ID .

    $default  reduce using rule 29 (ArgDecl)


state 81

   60 Expr: ID LPAREN ArgDeclList . RPAREN SEMICOLON

    RPAREN  shift, and go to state 110


state 82

   23 ArgDeclList: ArgDecl . COMMA ArgDeclList
   24            | ArgDecl .

    COMMA  shift, and go to state 111

    $default  reduce using rule 24 (ArgDeclList)


state 83

   57 Expr: ID LBRACE NUMBER . RBRACE EQ NUMBER SEMICOLON
   58     | ID LBRACE NUMBER . RBRACE EQ Math SEMICOLON
   59     | ID LBRACE NUMBER . RBRACE EQ CHARLITERAL SEMICOLON

    RBRACE  shift, and go to state 112


state 84

   50 Expr: ID EQ . ID SEMICOLON
   51     | ID EQ . ID LPAREN ArgDeclList RPAREN SEMICOLON
   65 IDEQExpr: ID EQ . MathStmt

    PLUS_OP    shift, and go to state 63
    MULT_OP    shift, and go to state 64
    SUB_OP     shift, and go to state 65
    DIV_OP     shift, and go to state 66
    EXPONENT   shift, and go to state 67
    LPAREN     shift, and go to state 68
    RPAREN     shift, and go to state 69
    NUMBER     shift, and go to state 106
    FLOAT_NUM  shift, and go to state 107
    ID         shift, and go to state 113

    MathStmt  go to state 74
    Math      go to state 75
    Operator  go to state 76


state 85

   56 Expr: IDEQExpr SEMICOLON .

    $default  reduce using rule 56 (Expr)


state 86

   14 FuncDecl: CHAR ID LPAREN @3 . ParamDeclList RPAREN Block

    CHAR   shift, and go to state 114
    INT    shift, and go to state 115
    FLOAT  shift, and go to state 116

    $default  reduce using rule 19 (ParamDecl)

    ParamDeclList  go to state 117
    ParamDecl      go to state 118


state 87

   86 ArrDecl: CHAR ID LBRACE RBRACE . SEMICOLON

    SEMICOLON  shift, and go to state 119


state 88

   88 ArrDecl: CHAR ID LBRACE NUMBER . RBRACE SEMICOLON

    RBRACE  shift, and go to state 120


state 89

   12 FuncDecl: INT ID LPAREN @2 . ParamDeclList RPAREN Block

    CHAR   shift, and go to state 114
    INT    shift, and go to state 115
    FLOAT  shift, and go to state 116

    $default  reduce using rule 19 (ParamDecl)

    ParamDeclList  go to state 121
    ParamDecl      go to state 118


state 90

   85 ArrDecl: INT ID LBRACE RBRACE . SEMICOLON

    SEMICOLON  shift, and go to state 122


state 91

   87 ArrDecl: INT ID LBRACE NUMBER . RBRACE SEMICOLON

    RBRACE  shift, and go to state 123


state 92

   16 FuncDecl: FLOAT ID LPAREN @4 . ParamDeclList RPAREN Block

    CHAR   shift, and go to state 114
    INT    shift, and go to state 115
    FLOAT  shift, and go to state 116

    $default  reduce using rule 19 (ParamDecl)

    ParamDeclList  go to state 124
    ParamDecl      go to state 118


state 93

   10 FuncDecl: VOID ID LPAREN @1 . ParamDeclList RPAREN Block

    CHAR   shift, and go to state 114
    INT    shift, and go to state 115
    FLOAT  shift, and go to state 116

    $default  reduce using rule 19 (ParamDecl)

    ParamDeclList  go to state 125
    ParamDecl      go to state 118


state 94

   98 Condition: NUMBER . CompOperator NUMBER

    DOUBLE_EQ  shift, and go to state 126
    NOT_EQ     shift, and go to state 127
    LT_EQ      shift, and go to state 128
    GT_EQ      shift, and go to state 129
    LT         shift, and go to state 130
    GT         shift, and go to state 131

    CompOperator  go to state 132


state 95

  101 Condition: FLOAT_NUM . CompOperator FLOAT_NUM

    DOUBLE_EQ  shift, and go to state 126
    NOT_EQ     shift, and go to state 127
    LT_EQ      shift, and go to state 128
    GT_EQ      shift, and go to state 129
    LT         shift, and go to state 130
    GT         shift, and go to state 131

    CompOperator  go to state 133


state 96

  102 Condition: CHARLITERAL . CompOperator CHARLITERAL

    DOUBLE_EQ  shift, and go to state 126
    NOT_EQ     shift, and go to state 127
    LT_EQ      shift, and go to state 128
    GT_EQ      shift, and go to state 129
    LT         shift, and go to state 130
    GT         shift, and go to state 131

    CompOperator  go to state 134


state 97

   99 Condition: ID . CompOperator ID
  100          | ID . CompOperator NUMBER

    DOUBLE_EQ  shift, and go to state 126
    NOT_EQ     shift, and go to state 127
    LT_EQ      shift, and go to state 128
    GT_EQ      shift, and go to state 129
    LT         shift, and go to state 130
    GT         shift, and go to state 131
